--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <div id="example"></div>
-        <script src="dist/bundle.js"></script>
+        <script src="dist/app.js"></script>
     </body>
 </html>
